# sql_0623

./: .env.example  .gitignore  CLARIFICATION_TESTS.md  FEATURE_ROADMAP.md  README.md  STAGE2_PLAN.md  STAGE2_TESTS.md  STAGE3_TESTS.md  STAGE4_TESTS.md  STAGE6_TESTS.md  STAGE7_TESTS.md  STAGE8_TESTS.md  TEST_QUESTIONS.md  agent_core.py  agent_loop.py  handler.py  main.py  pyproject.toml  server.py  server_dify.py  setup_test_db.py
PLAN/: ARCHITECTURE_REFACTOR.md  BUSINESS_RULES_SUMMARY.md  BUSINESS_SEMANTIC_LAYER.md  DEVELOPMENT_PLAN.md  PHASE1_DETAIL.md  PHASE2_DETAIL.md  PHASE3_DETAIL.md  PHASE4_DETAIL.md  PHASE5_DETAIL.md  STAGE8_QUERY_PATTERNS.md  STAGE8_RAG_INTEGRATION.md  STAGE8_TESTS.md  STAGE9_OPS.md
admin/: index.html  package.json  vite.config.js
admin/src/: App.vue  api.js  main.js  router.js
data/: region_tree.json
memory/: L0_meta_rules.md  business_rules.json  global_mem.txt  progress_guide.md  skills_index.json
memory/business_metrics/: general_public.json  gov_fund.json  index.json  social_insurance.json  state_capital.json  templates.json
memory/skills/: advanced_analysis.md  aggregation.md  budget_progress.md  error_recovery.md  (+10 more)
prompts/: system_prompt.txt
static/: admin.html  index.html
tests/: STAGE5_TESTS.md  TEST_QUESTIONS.md  TEST_STAGE1.md
tools/: admin_db.py  business_feedback.py  business_loader.py  config.py  db_advanced.py  db_aggregation.py  db_connection.py  db_cross_table.py  db_query.py  db_schema.py  error_handler.py  pattern_store.py  rag_ingest.py  rag_tool.py  schema.py  time_resolver.py  tracer.py  tracer_stats.py
(+5 files in other folders)
