[project]
name = "sql-0623"
version = "0.1.0"
description = "Text-to-SQL Agent - 自然语言查询数据库"
requires-python = ">=3.11"
dependencies = [
    "dmpython>=2.5.32",
    "fastapi>=0.138.0",
    "langchain-core>=1.4.8",
    "langchain-openai>=1.3.3",
    "openai>=2.43.0",
    "pg8000>=1.31.5",
    "pgvector>=0.4.2",
    "psycopg2-binary>=2.9.12",
    "pymysql>=1.2.0",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "sqlalchemy>=2.0.51",
    "uvicorn>=0.49.0",
]

[project.scripts]
sql-agent = "server:main"

[dependency-groups]
dev = []
